--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "repository": {
@@ -18,6 +18,6 @@
   },
   "homepage": "https://github.com/donlejobgithub/tool-inventory#readme",
   "dependencies": {
-    "json-server": "0.16.3"
+    "json-server": "^0.16.3"
   }
 }
